tests/datatypes/errors/ref_undefined_var.js
/*
Expected Error:
ReferenceError
*/
console.log(nonExistentVar);
